# repairbotmlx-inference

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: chat.py  main.py  mlx_service.py  video.py
frontend/: package.json  pnpm-lock.yaml
frontend/.next/: prerender-manifest.json  react-loadable-manifest.json  trace
frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @ai-sdk+provider-utils@2.2.8_zod@3.25.76.js  @ai-sdk+provider@1.1.3.js  @ai-sdk+react@1.2.12_react@19.1.1_zod@3.25.76.js  @ai-sdk+ui-utils@1.2.11_zod@3.25.76.js  @babel+runtime@7.28.2.js  @codemirror+autocomplete@6.18.6.js  @codemirror+commands@6.8.1.js  @codemirror+lang-css@6.3.1.js  @codemirror+lang-html@6.4.9.js  @codemirror+lang-javascript@6.2.4.js  @codemirror+lang-python@6.2.1.js  @codemirror+language@6.11.2.js  @codemirror+lint@6.8.5.js  @codemirror+search@6.5.11.js  @codemirror+state@6.5.2.js  @codemirror+theme-one-dark@6.1.3.js  @codemirror+view@6.38.1.js  @floating-ui+core@1.7.3.js  @floating-ui+dom@1.7.3.js  @floating-ui+react-dom@2.1.5_react-dom@19.1.1_react@19.1.1__react@19.1.1.js  @floating-ui+utils@0.2.10.js  @lexical+clipboard@0.33.1.js  (+274 more)
frontend/app/: layout.tsx  page.tsx
frontend/components/: BackendVideoFeed.tsx  HiddenAudioPlayer.tsx  VideoChatCanvas.tsx  VideoFeed.tsx
(+13 files in other folders)
