[project]
name = "fastapi-chatui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx-lm==0.24.0",
    "mlx-audio",
    "pyaudio",
    "misaki[en]>=0.8.2",
    "loguru>=0.7.3",
    "num2words>=0.5.14",
    "spacy>=3.8.4",
    "phonemizer-fork>=3.3.2",
    "espeakng-loader>=0.2.4",
    "mlx>=0.25.2",
    "numpy>=1.26.4",
    "transformers>=4.49.0",
    "sentencepiece>=0.2.0",
    "huggingface_hub>=0.27.0",
    "torchvision==0.22.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.22.0",
    "einops==0.8.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "pyloudnorm>=0.1.1",
    "omegaconf==2.3.0",
    "einx==0.3.0",
    "fastrtc[vad,stt]",
    "webrtcvad>=2.0.10",
    "dacite>=1.9.2",
    "pytest-asyncio>=1.0.0",
    "hf-transfer>=0.1.9",
    "python-dotenv>=1.1.0",
    "aiohttp>=3.12.15",
    "mlx-whisper>=0.4.2",
]
